@@ -35,6 +35,10 @@ CXX20 = @CXX20@
 CXX20FLAGS = @CXX20FLAGS@ $(LTO)
 CXX20PICFLAGS = @CXX20PICFLAGS@
 CXX20STD = @CXX20STD@
+CXX23 = @CXX23@
+CXX23FLAGS = @CXX23FLAGS@ $(LTO)
+CXX23PICFLAGS = @CXX23PICFLAGS@
+CXX23STD = @CXX23STD@
 CXX_VISIBILITY = @CXX_VISIBILITY@
 DYLIB_EXT = @DYLIB_EXT@
 DYLIB_LD = @DYLIB_LD@
@@ -112,6 +116,8 @@ SHLIB_CXX17LD = @SHLIB_CXX17LD@
 SHLIB_CXX17LDFLAGS = @SHLIB_CXX17LDFLAGS@@BUILD_LTO_ALL_TRUE@ $(CXX17FLAGS) $(CXX17PICFLAGS) $(LTO_LD)
 SHLIB_CXX20LD = @SHLIB_CXX20LD@
 SHLIB_CXX20LDFLAGS = @SHLIB_CXX20LDFLAGS@@BUILD_LTO_ALL_TRUE@ $(CXX20FLAGS) $(CXX20PICFLAGS) $(LTO_LD)
+SHLIB_CXX23LD = @SHLIB_CXX23LD@
+SHLIB_CXX23LDFLAGS = @SHLIB_CXX23LDFLAGS@@BUILD_LTO_ALL_TRUE@ $(CXX23FLAGS) $(CXX23PICFLAGS) $(LTO_LD)
 SHLIB_EXT = @SHLIB_EXT@
 SHLIB_FCLD = @SHLIB_FCLD@
 SHLIB_FCLDFLAGS = @SHLIB_FCLDFLAGS@@BUILD_LTO_ALL_TRUE@ $(FCFLAGS) $(FPICFLAGS)
